@@ -12,3 +12,4 @@ src/M30.o
 src/M33c.o
 src/Mstep.o
 src/.fastgrid_helper.cc.swp
+*.o
