@@ -143,6 +143,32 @@
  * return.  If we change our minds down the road about how to handle
  * these returns, code changes will be centered on this macro.
  */
+ 
+ 
+template<long FROM, long TO>
+class Range {
+public:
+    class iterator {
+        long num = FROM;
+    public:
+        iterator(long _num = 0) : num(_num) {}
+        iterator& operator++() {num = TO >= FROM ? num + 1: num - 1; return *this;}
+        iterator operator++(int) {iterator retval = *this; ++(*this); return retval;}
+        bool operator==(iterator other) const {return num == other.num;}
+        bool operator!=(iterator other) const {return !(*this == other);}
+        long operator*() {return num;}
+        // iterator traits
+        using difference_type = long;
+        using value_type = long;
+        using pointer = const long*;
+        using reference = const long&;
+        using iterator_category = std::forward_iterator_tag;
+    };
+    iterator begin() {return FROM;}
+    iterator end() {return TO >= FROM? TO+1 : TO-1;}
+};
+
+ 
 #define SCYTHE_VIEW_RETURN(_TYPE_, _ORDER_, _STYLE_, _MATRIX_)        \
     return _MATRIX_;
 
